Add clickable QR code to licenses page

--- a/licenses.html
+++ b/licenses.html
@@ -21,7 +21,8 @@
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"ItemList","itemListElement":[
     {"@type":"ListItem","position":1,"item":{"@type":"ImageObject","name":"Сертификат соответствия","description":"Документ подтверждает допуск к спецработам по откачке канализации","url":"https://zolotar58.ru/license1.jpg"}},
-    {"@type":"ListItem","position":2,"item":{"@type":"ImageObject","name":"Лицензия на услуги","description":"Официальное разрешение на ассенизаторские работы","url":"https://zolotar58.ru/license2.jpg"}}
+    {"@type":"ListItem","position":2,"item":{"@type":"ImageObject","name":"Лицензия на услуги","description":"Официальное разрешение на ассенизаторские работы","url":"https://zolotar58.ru/license2.jpg"}},
+    {"@type":"ListItem","position":3,"item":{"@type":"ImageObject","name":"QR-код для проверки лицензии","description":"Ведёт на страницу лицензии в реестре Росприроднадзора","contentUrl":"https://zolotar58.ru/qr-code.svg","url":"https://knd.gov.ru/license?registryType=wasteLicensing&id=68df7c94fbcfc4d78d02bbd7"}}
   ]}
   </script>
 </head>
@@ -102,6 +103,17 @@
               <span class="license-desc">НП «Ассенизаторы России»</span>
             </div>
           </div>
+        </div>
+
+        <div class="license-item">
+          <a class="license-card license-card--qr" href="https://knd.gov.ru/license?registryType=wasteLicensing&amp;id=68df7c94fbcfc4d78d02bbd7" target="_blank" rel="noopener noreferrer" aria-label="Открыть страницу лицензии в реестре и отсканировать QR-код">
+            <img src="qr-code.svg" alt="QR-код для проверки лицензии в реестре Росприроднадзора" loading="lazy" class="license-img license-img--qr" width="400" height="400">
+            <div class="license-caption">
+              <span class="license-title">QR-код проверки</span>
+              <span class="license-desc">Открывает лицензию в реестре Росприроднадзора</span>
+              <span class="license-hint">Сканируйте камерой или нажмите, чтобы перейти</span>
+            </div>
+          </a>
         </div>
       </div>
     </section>
