--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/montserrat/v25/JTURjIg1_i6t8kCHKm45_dJE3gnD_vx3rCubqg.woff2" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <!-- Organization -->
@@ -36,17 +37,12 @@
   <!-- Ссылка пропуска к основному контенту -->
   <a class="skip-link" href="#main">К основному содержимому</a>
 
-  <!-- Языковой переключатель + скрытый элемент Google -->
-  <div class="lang-switcher" aria-label="Выбор языка">
-      <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
-      <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
-    </div>
   <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
   <header class="header" id="sticky-header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link" aria-label="На главную">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58" width="60" height="60" loading="eager">
+        <img src="logo.png" width="60" height="60" fetchpriority="high" decoding="async" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
 
@@ -58,9 +54,8 @@
         <a href="licenses.html" class="nav-link">Сертификаты</a>
         <a href="contacts.html" class="nav-link">Контакты</a>
 
-        <!-- Переключатель языка размещён внутри меню -->
         <div class="lang-switcher" aria-label="Выбор языка">
-          <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
+          <button type="button" class="lang-btn active" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
           <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
         </div>
       </nav>
@@ -77,7 +72,7 @@
   <span class="wnb-label">На связи 24/7</span>
   <span class="wnb-sep">•</span>
   <span class="wnb-addr">Пушанина 46а, Пенза</span>
-  <button class="wnb-close" aria-label="Скрыть плашку" title="Скрыть">&times;</button>
+  <button class="wnb-close" type="button" aria-label="Закрыть">×</button>
 </div>
 
   <main id="main">
@@ -91,25 +86,25 @@
     <section class="about-content">
       <article class="about-section">
         <h2>Наша история</h2>
-        <div class="timeline">
+        <div class="timeline timeline--strong">
           <div class="timeline-item">
             <div class="timeline-year">2020</div>
             <div class="timeline-content">
-              <h3>Основание компании</h3>
+              <h3 class="h3-strong">Основание компании</h3>
               <p>Начало работы с одним ассенизаторским автомобилем и минимальным набором оборудования.</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-year">2022</div>
             <div class="timeline-content">
-              <h3>Расширение парка техники</h3>
+              <h3 class="h3-strong">Расширение парка техники</h3>
               <p>Приобретение дополнительной спецтехники и оборудования для гидродинамической промывки.</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-year">2025</div>
             <div class="timeline-content">
-              <h3>Запуск сайта</h3>
+              <h3 class="h3-strong">Запуск сайта</h3>
               <p>Создание онлайн-представительства для удобства клиентов.</p>
             </div>
           </div>
@@ -272,19 +267,6 @@
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function(){
-  // — Переносим любой "лишний" .lang-switcher внутрь <nav>, дубликаты удаляем
-  var nav = document.querySelector('.nav');
-  if (nav){
-    var sw = document.querySelectorAll('.lang-switcher');
-    sw.forEach(function(el, i){
-      if (!el.closest('.nav')){
-        if (!nav.querySelector('.lang-switcher')) nav.appendChild(el);
-        else el.remove();
-      }
-    });
-  }
-
-  // — Логика плашки: крестик + автоскрытие у футера
   var bar = document.getElementById('wnb');
   if (bar){
     var closeBtn = bar.querySelector('.wnb-close');
