--- a/services.html
+++ b/services.html
@@ -12,6 +12,9 @@
   <meta property="og:url" content="https://zolotar58.ru/services.html">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/montserrat/v25/JTURjIg1_i6t8kCHKm45_dJE3gnD_vx3rCubqg.woff2" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <!-- Schema.org -->
@@ -37,17 +40,12 @@
   </script>
 </head>
 <body>
-  <!-- Языковой переключатель + скрытый элемент Google -->
-  <div class="lang-switcher" aria-label="Выбор языка">
-    <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
-    <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
-  </div>
   <div id="google_translate_element" class="visually-hidden"></div>
 
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" width="60" height="60" fetchpriority="high" decoding="async" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
@@ -56,13 +54,21 @@
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
+        <div class="lang-switcher" aria-label="Выбор языка">
+          <button type="button" class="lang-btn active" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
+          <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
+        </div>
       </nav>
       <button class="burger" aria-label="Открыть меню"><span></span></button>
     </div>
   </header>
 
-  <div class="working-now-bar">
-    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
+  <div class="working-now-bar" role="status" aria-live="polite">
+    <span class="emoji" aria-hidden="true">💧</span>
+    На связи 24/7
+    <span class="wnb-sep">•</span>
+    <span class="wnb-addr">Пушанина 46а, Пенза</span>
+    <button class="wnb-close" type="button" aria-label="Закрыть">×</button>
   </div>
 
   <main>
@@ -77,35 +83,35 @@
     <section class="services-list">
       <div class="service-card">
         <button type="button" class="service-img-trigger" data-image="septic.jpg" data-caption="Откачка септиков и ям">
-          <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img" loading="lazy" width="480" height="320">
+          <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img" loading="lazy" decoding="async" width="480" height="320">
         </button>
         <h3>Откачка канализации и септиков</h3>
         <p>Оперативная откачка и вывоз содержимого септиков, выгребных ям, колодцев, ливнёвок и пр. Собственный автопарк.</p>
       </div>
       <div class="service-card">
         <button type="button" class="service-img-trigger" data-image="mechanical.jpg" data-caption="Механическая и гидродинамическая чистка">
-          <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img" loading="lazy" width="480" height="320">
+          <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img" loading="lazy" decoding="async" width="480" height="320">
         </button>
         <h3>Гидродинамическая и механическая чистка</h3>
         <p>Устраняем засоры труб и канализации профессиональным оборудованием, работаем с любыми диамерами.</p>
       </div>
       <div class="service-card">
         <button type="button" class="service-img-trigger" data-image="video.jpg" data-caption="Видеоинспекция труб">
-          <img src="video.jpg" alt="Видеоинспекция труб" class="service-img" loading="lazy" width="480" height="320">
+          <img src="video.jpg" alt="Видеоинспекция труб" class="service-img" loading="lazy" decoding="async" width="480" height="320">
         </button>
         <h3>Видеоинспекция труб</h3>
         <p>Диагностика состояния трубопроводов камерой, поиск проблем, рекомендации по ремонту.</p>
       </div>
       <div class="service-card">
         <button type="button" class="service-img-trigger" data-image="service-org.jpg" data-caption="Обслуживание организаций">
-          <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img" loading="lazy" width="480" height="320">
+          <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img" loading="lazy" decoding="async" width="480" height="320">
         </button>
         <h3>Обслуживание организаций</h3>
         <p>Официальные договоры, документы, комплексное обслуживание объектов юр. лиц и управляющих компаний.</p>
       </div>
       <div class="service-card">
         <button type="button" class="service-img-trigger" data-image="search.jpg" data-caption="Аварийный выезд и поиск засоров">
-          <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img" loading="lazy" width="480" height="320">
+          <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img" loading="lazy" decoding="async" width="480" height="320">
         </button>
         <h3>Аварийный выезд 24/7</h3>
         <p>Быстрая помощь при засорах, затоплениях, сбоях. Работаем по Пензе и области, без выходных.</p>
@@ -115,13 +121,13 @@
 
     <section class="about-text" style="margin-top: 42px;">
       <h2>Преимущества работы с нами</h2>
-      <ul>
-        <li>Официальный подрядчик по Пензе и области</li>
-        <li>Круглосуточная поддержка</li>
-        <li>Честные цены без скрытых платежей</li>
-        <li>Работаем с частными лицами и организациями</li>
-        <li>Документы для юр. лиц и управляющих компаний</li>
-        <li>Всегда на связи по телефону: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a></li>
+      <ul class="emoji-list">
+        <li data-emoji="🏢">Официальный подрядчик по Пензе и области</li>
+        <li data-emoji="🌙">Круглосуточная поддержка</li>
+        <li data-emoji="💰">Честные цены без скрытых платежей</li>
+        <li data-emoji="🤝">Работаем с частными лицами и организациями</li>
+        <li data-emoji="📄">Документы для юр. лиц и управляющих компаний</li>
+        <li data-emoji="📞">Всегда на связи по телефону: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a></li>
       </ul>
     </section>
   </main>
@@ -138,7 +144,7 @@
   <div class="lightbox" hidden role="dialog" aria-modal="true">
     <button type="button" class="lightbox-close" aria-label="Закрыть изображение"></button>
     <figure class="lightbox-figure">
-      <img src="" alt="" class="lightbox-img" loading="lazy">
+      <img src="" alt="" class="lightbox-img" loading="lazy" decoding="async">
       <figcaption class="lightbox-caption"></figcaption>
     </figure>
   </div>
@@ -159,8 +165,10 @@
       combo.value = lang;
       combo.dispatchEvent(new Event('change'));
       localStorage.setItem('site_lang', lang);
-      document.querySelectorAll('.lang-btn').forEach(b=>{
-        b.classList.toggle('active', b.dataset.lang === lang);
+      document.querySelectorAll('.lang-btn').forEach(function(b){
+        var isActive = b.dataset.lang === lang;
+        b.classList.toggle('active', isActive);
+        b.setAttribute('aria-pressed', String(isActive));
       });
       document.documentElement.setAttribute('lang', lang === 'en' ? 'en' : 'ru');
     }
@@ -242,6 +250,5 @@
     });
   </script>
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <div id="google_translate_element" class="visually-hidden"></div>
 </body>
 </html>
