Adjust license QR and header language spacing

--- a/licenses.html
+++ b/licenses.html
@@ -86,9 +86,11 @@
 
         <div class="license-item">
           <div class="license-card license-card--qr">
-            <a class="license-qr-link" href="https://knd.gov.ru/license?registryType=wasteLicensing&amp;id=68df7c94fbcfc4d78d02bbd7" target="_blank" rel="noopener noreferrer" aria-label="Открыть страницу лицензии в реестре Росприроднадзора">
-              <img src="qr-code.svg" alt="QR-код для проверки лицензии в реестре Росприроднадзора" loading="lazy" decoding="async" class="license-img license-img--qr" width="400" height="400">
-            </a>
+            <div class="license-qr">
+              <a href="https://knd.gov.ru/license?registryType=wasteLicensing&amp;id=68df7c94fbcfc4d78d02bbd7" target="_blank" rel="noopener nofollow" class="qr-link" aria-label="Открыть страницу лицензии в реестре Росприроднадзора">
+                <img src="qr-code.svg" alt="QR-код для проверки лицензии в реестре Росприроднадзора" width="200" height="200" loading="lazy" decoding="async">
+              </a>
+            </div>
             <div class="license-caption license-caption--qr">
               <span class="license-title">QR-код проверки</span>
               <span class="license-desc">Открывает лицензию в реестре Росприроднадзора</span>
@@ -96,20 +98,6 @@
             </div>
           </div>
         </div>
-
-        <div class="license-item">
-          <a class="license-card license-card--qr" href="https://knd.gov.ru/license?registryType=wasteLicensing&amp;id=68df7c94fbcfc4d78d02bbd7" target="_blank" rel="noopener noreferrer" aria-label="Открыть страницу лицензии в реестре и отсканировать QR-код">
-            <img src="qr-code.svg" alt="QR-код для проверки лицензии в реестре Росприроднадзора" loading="lazy" decoding="async" class="license-img license-img--qr" width="400" height="400">
-            <div class="license-caption">
-              <span class="license-title">QR-код проверки</span>
-              <span class="license-desc">Открывает лицензию в реестре Росприроднадзора</span>
-              <span class="license-hint">Сканируйте камерой или нажмите, чтобы перейти</span>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="licenses-actions">
-        <a class="btn btn--ghost" href="https://knd.gov.ru/license?registryType=wasteLicensing&amp;id=68df7c94fbcfc4d78d02bbd7" target="_blank" rel="noopener noreferrer">QR-код проверки</a>
       </div>
     </section>
 
